--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <b style="color: white;">|</b>
     <a href="#" onclick="window.api.openExternal('https://rosie.run')" style="color: cornflowerblue;">Website</a>
     <b style="color: white;">|</b>
-    <a href="#" onclick="window.api.openExternal('https://rosie.run/support')" style="color: cornflowerblue;">Support</a>
+    <a href="#" onclick="window.api.openExternal('https://rosie.run/support')" style="color: cornflowerblue;">Support this project!</a>
     <b style="color: white;">|</b>
     <a href="#" onclick="window.location.href = 'licenses.html'" style="color: cornflowerblue;">Licenses</a>
   </p>
