--- a/beta-redesign.html
+++ b/beta-redesign.html
@@ -50,7 +50,7 @@
     <center><button id="resetSettings" class="small-btn danger" style="margin-top: 5px; margin-bottom: 10px;">Reset Settings</button></center>
       <p id="version-info">
         <a href="#" onclick="showKeyboardShortcuts(); return false;" style="text-align: center; margin-top: -7px;"><button class="small-btn">Shortcuts</button></a>
-        <a href="#" title="View release notes" style="text-align: right; margin-right: 10px;" onclick="window.api.openExternal('https://github.com/BurntToasters/ROSI-msstore/releases/tag/v1.1.7')">V1.1.7-MSSTORE</a>
+        <a href="#" title="View release notes" style="text-align: right; margin-right: 10px;" onclick="window.api.openExternal('https://github.com/BurntToasters/ROSI-msstore/releases/tag/v1.1.8')">V1.1.8 (MS STORE)</a>
       </p>
     
   </div>
